adding titanium block and recipe

--- a/src/main/resources/assets/kirecmod/lang/en_us.json
+++ b/src/main/resources/assets/kirecmod/lang/en_us.json
@@ -1,4 +1,8 @@
 {
     "item.kirecmod.titanium_ingot": "Titanium Ingot",
-    "item.kirecmod.titanium_raw": "Titanium Raw"
+    "item.kirecmod.titanium_raw": "Titanium Raw",
+
+    "block.kirecmod.titanium_block": "Titanium Bock",
+
+    "itemGroup.kirecmod_tab": "kirec Mod"
 }
