adding: Endemonium block, ingot and nugget + add recipes

--- a/src/main/resources/assets/kirecmod/lang/en_us.json
+++ b/src/main/resources/assets/kirecmod/lang/en_us.json
@@ -1,6 +1,8 @@
 {
     "item.kirecmod.titanium_ingot": "Titanium Ingot",
     "item.kirecmod.titanium_raw": "Titanium Raw",
+    "item.kirecmod.endemonium_ingot": "Endemonium Ingot",
+    "item.kirecmod.endemonium_nugget": "Endemonium Nugget",
 
     "block.kirecmod.titanium_block": "Titanium Bock",
 
