added lot table for endemonium block, fix destroy time for blocks and translate endemonium block

--- a/src/main/resources/assets/kirecmod/lang/en_us.json
+++ b/src/main/resources/assets/kirecmod/lang/en_us.json
@@ -5,6 +5,7 @@
     "item.kirecmod.endemonium_nugget": "Endemonium Nugget",
 
     "block.kirecmod.titanium_block": "Titanium Bock",
+    "block.kirecmod.endemonium_block": "Endemonium Block",
 
     "itemGroup.kirecmod_tab": "kirec Mod"
 }
