--- a/src/main/resources/assets/kirecmod/lang/fr_fr.json
+++ b/src/main/resources/assets/kirecmod/lang/fr_fr.json
@@ -5,6 +5,7 @@
     "item.kirecprod.endemonium_nugget": "Pépide d'Endémonite",
 
     "block.kirecmod.titanium_block": "Bloc de Titane",
+    "block.kirecmod.endemonium_block": "Bloc d'Endemonium",
 
     "itemGroup.kirecmod_tab": "Kirec Mod"
 
